Edited some responsiveness to privatechat.

--- a/src/app/main/private-chat/private-chat-header/private-chat-header.component.scss
+++ b/src/app/main/private-chat/private-chat-header/private-chat-header.component.scss
@@ -21,6 +21,10 @@ mat-toolbar {
   }
 }
 
+.other-user {
+  max-width: 90vw;
+}
+
 .other-user-button {
   color: var(--black-color) !important;
   display: flex;
