--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -39,6 +39,7 @@
             class="toolbar-icon"
             clickStopPropagation
             (click)="openCreateChannelDialog()"
+            [attr.autofocus]="false"
           >
             <mat-icon class="material-symbols-outlined add-icon">add</mat-icon>
           </button>
