--- a/src/app/main/private-chat/private-chat-placeholder/private-chat-placeholder.component.scss
+++ b/src/app/main/private-chat/private-chat-placeholder/private-chat-placeholder.component.scss
@@ -1,79 +1,91 @@
 section {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-end;
-    padding: 10px 20px;
-    gap: 20px;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+  padding: 10px 20px;
+  gap: 20px;
 }
 
 .other-user {
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-start;
-    gap: 10px;
-    img {
-        width: 100px;
-        height: 100px;
-        border-radius: 100px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+  gap: 10px;
+  img {
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
 
-        &:hover {
-            cursor: pointer;
-        }
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  span {
+    color: var(--black-color);
+    font-weight: 700;
+    font-size: 24px;
+    flex-wrap: wrap;
+
+    p {
+      margin: 0;
+      display: inline;
     }
 
-    span {
-        color: var(--black-color);
-        font-weight: 700;
-        font-size: 24px;
+    &:hover {
+      cursor: pointer;
+      color: var(--purple3-color);
+    }
+  }
+}
 
-        p {
-            margin: 0;
-            display: inline;
-        }
+.description-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  font-family: var(--font-nunito);
+  color: var(--grey-color);
 
-        &:hover {
-            cursor: pointer;
-            color: var(--purple3-color);
-        }
+  span {
+    width: fit-content;
+    max-width: 90%;
+    flex-wrap: wrap;
+    overflow-wrap: break-word;
+    word-break: break-word;
+  }
+
+  p:first-of-type {
+    font-weight: 700;
+    margin: 0;
+    display: inline;
+  }
+
+  a {
+    color: var(--purple3-color);
+    text-decoration: none;
+    font-weight: 400;
+    text-align: center;
+
+    &:hover {
+      font-weight: 700;
+      cursor: pointer;
+      transform: scale(1);
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+    .other-user span {
+        max-width: 70%;
     }
 }
 
-.description {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    font-family: var(--font-nunito);
-    color: var(--grey-color);
-
-    span {
-        width: fit-content;
-        max-width: 100%;
-        flex-wrap: wrap;
-        overflow-wrap: break-word;
-        word-break: break-word; /* Alternative: break-all */
-
-    }
-
-    p:first-of-type {
-        font-weight: 700;
-        margin: 0;
-        display: inline;
-    }
-    
-    a {
-        color: var(--purple3-color);
-        text-decoration: none;
-        font-weight: 400;
-        font-size: 20px;
-        width: 159px;
-        text-align: center;
-
-        &:hover {
-            font-weight: 700;
-            cursor: pointer;
-        }
-    }
+@media only screen and (max-width: 500px) {
+  .other-user img {
+    width: 80px;
+    height: 80px;
+  }
 }
