--- a/src/app/shared/components/message-reactions/message-reactions.component.scss
+++ b/src/app/shared/components/message-reactions/message-reactions.component.scss
@@ -30,6 +30,7 @@
   gap: 5px;
   position: relative;
   flex-wrap: wrap;
+  max-width: 80%;
 
   > span {
     display: flex;
@@ -71,7 +72,7 @@
     display: flex;
     align-items: center;
 
-    >div {
+    > div {
       margin-left: -5px;
     }
   }
