--- a/src/app/landing-page/login/reset-password/reset-password.component.html
+++ b/src/app/landing-page/login/reset-password/reset-password.component.html
@@ -23,8 +23,19 @@
     <p>Bitte geben Sie Ihre E-Mail-Adresse ein.</p>
 
     <div class="input-primary">
-      <input [formControl]="email" placeholder="beispielname&#64;email.com" />
+      <input
+        [formControl]="email"
+        placeholder="beispielname&#64;email.com"
+        [ngClass]="{ 'input-error': email.invalid && email.touched }"
+      />
       <mat-icon>mail_outline</mat-icon>
+
+      <div *ngIf="email.touched && email.invalid" class="error-message">
+        <ng-container *ngIf="email.hasError('required'); else emailInvalid">
+          E-Mail ist erforderlich.
+        </ng-container>
+        <ng-template #emailInvalid> Ungültige E-Mail-Adresse. </ng-template>
+      </div>
     </div>
 
     <p *ngIf="errorMessage" class="error-message">{{ errorMessage }}</p>
