--- a/src/app/shared/components/imprint/imprint.component.html
+++ b/src/app/shared/components/imprint/imprint.component.html
@@ -17,9 +17,9 @@
     <section>
       <h2>Kontakt</h2>
       <p>
-        Telefon: +49 (0) 123 44 55 66<br />
-        Telefax: nicht vorhanden.<br />
-        E-Mail: email.adresse&#64;mail.de
+        <b>Telefon:</b> +49 (0) 123 44 55 66<br />
+        <b>Telefax:</b> nicht vorhanden.<br />
+        <b>E-Mail:</b> email.adresse&#64;mail.de
       </p>
     </section>
   </mat-card>
