--- a/src/app/landing-page/login/login.component.scss
+++ b/src/app/landing-page/login/login.component.scss
@@ -1,3 +1,8 @@
+p,
+a {
+  font-size: clamp(0.8em, 1.5vw, 1.8em);
+}
+
 .login {
   display: flex;
   flex-direction: column;
@@ -7,21 +12,21 @@
   height: 100%;
 
   mat-card {
+    opacity: 0;
+    animation: card-fade-in 1s ease-out forwards;
+
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
 
-    gap: 20px;
+    gap: clamp(2vh, 3vh, 4vh);
 
-    min-height: 60%;
-    max-height: 80%;
-    min-width: 25%;
     max-width: 50%;
 
     text-align: center;
 
-    padding: 50px;
+    padding: clamp(20px, 5vw, 50px);
 
     background-color: var(--text-color);
     border-radius: 30px;
@@ -30,6 +35,7 @@
 
     h1 {
       color: var(--purple1-color);
+      margin-bottom: -3vh;
     }
 
     p {
@@ -45,6 +51,30 @@
         background-color: var(--bg-color);
         border-radius: 100px;
         color: var(--purple1-color);
+      }
+    }
+
+    .input-primary {
+      position: relative;
+      background-color: var(--bg-color);
+
+      input {
+        font-size: clamp(0.8em, 1.5vw, 1.8em);
+      }
+
+      .input-error {
+        box-shadow: 0 0 0 1px var(--error-color) !important;
+      }
+
+      .error-message {
+        position: absolute;
+        bottom: -2.5vh;
+
+        display: flex;
+        flex-direction: column;
+
+        color: var(--error-color);
+        font-size: clamp(0.5em, 0.6vw, 1.5em);
       }
     }
 
@@ -68,10 +98,9 @@
       align-items: center;
       justify-content: center;
       width: 100%;
-      height: 10%;
       border-radius: 100px;
       background-color: var(--bg-color);
-      padding: var(--padding-16);
+      padding: 1vh 1vw;
       gap: var(--gap-20);
 
       transition: var(--transition-100);
@@ -88,15 +117,20 @@
 
     .buttons {
       width: 100%;
-      height: 10%;
       display: flex;
       justify-content: center;
       gap: var(--gap-30);
+
+      button {
+        height: 100%;
+        font-size: clamp(0.8em, 1.5vw, 1.8em);
+      }
     }
   }
 
   .error-message {
     color: var(--error-color);
+    font-size: clamp(0.5em, 0.6vw, 1em);
   }
 
   .logo-bg {
@@ -125,7 +159,7 @@
     .logo-container {
       position: relative;
       z-index: 2;
-      top: 0;
+      top: 5vh;
       left: 0;
       display: flex;
       align-items: center;
@@ -137,14 +171,15 @@
         position: relative;
         left: 50%;
         transform: translateX(-50%);
-        height: 184px;
+        transform-origin: center;
+        height: 10vw;
         animation: logo-left 0.3s ease-in-out 0.5s 1 forwards,
           logo-img-scale-small 0.5s ease-in-out 3s 1 forwards;
       }
 
       .logo-name {
         position: relative;
-        font-size: 72px;
+        font-size: 6em;
         font-weight: bold;
         letter-spacing: -2px;
         overflow: hidden;
@@ -186,8 +221,8 @@
 
   .logo-final {
     position: fixed;
-    top: 75px;
-    left: 75px;
+    top: 2vh;
+    left: 2vw;
     z-index: 2;
 
     .logo-container {
@@ -196,13 +231,12 @@
       gap: var(--gap-16);
 
       img {
-        height: 70px;
-        /* transform: none; */ // Keine Animation für die finale Position
+        height: clamp(56px, 10vw, 100px);
       }
 
       .logo-name {
         position: relative;
-        font-size: 34px;
+        font-size: clamp(1.5em, 5vw, 2.5em);
         color: var(--black-color);
         font-weight: bold;
         letter-spacing: -2px;
@@ -234,8 +268,8 @@
   }
 
   .register-link {
-    top: 75px;
-    right: 75px;
+    top: 2vh;
+    right: 2vw;
     flex-direction: column;
     text-align: end;
     align-items: end;
@@ -246,8 +280,7 @@
   }
 
   .info-links {
-    bottom: 2.5vh;
-    width: 100%;
+    bottom: 2vh;
 
     justify-content: center;
   }
@@ -303,30 +336,38 @@
   }
   100% {
     gap: 16px;
-    transform: translate(
-      calc(-50vw + 117.5px + 75px),
-      calc(-50vh + 35px + 75px)
-    );
+    transform: translate(calc(-50vw + 50% + 2vw), calc(-50vh + 50% + 2vh));
   }
 }
 
 @keyframes logo-img-scale-small {
   0% {
-    height: 184px;
+    height: 10vw;
   }
   100% {
-    height: 70px;
+    height: clamp(56px, 10vw, 100px);
   }
 }
 
 @keyframes logo-text-scale-small {
   0% {
-    font-size: 72px;
+    font-size: 6em;
     overflow: hidden;
   }
   100% {
     color: var(--black-color);
-    font-size: 34px;
+    font-size: clamp(1.5em, 5vw, 2.5em);
     overflow: unset;
+  }
+}
+
+@keyframes card-fade-in {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
