--- a/src/app/landing-page/login/reset-password/reset-password.component.scss
+++ b/src/app/landing-page/login/reset-password/reset-password.component.scss
@@ -1,3 +1,8 @@
+p,
+a {
+  font-size: clamp(0.8em, 1.5vw, 1.8em);
+}
+
 .reset-password {
   display: flex;
   flex-direction: column;
@@ -12,16 +17,13 @@
     justify-content: space-evenly;
     align-items: center;
 
-    gap: 30px;
+    gap: clamp(2vh, 3vh, 4vh);
 
-    min-height: 60%;
-    max-height: 80%;
-    min-width: 25%;
     max-width: 50%;
 
     text-align: center;
 
-    padding: 50px;
+    padding: clamp(20px, 5vw, 50px);
 
     background-color: var(--text-color);
     border-radius: 30px;
@@ -37,6 +39,7 @@
         cursor: pointer;
         color: var(--black-color);
         font-size: 24px;
+        scale: 1.5;
 
         &:hover {
           background-color: var(--bg-color);
@@ -60,29 +63,57 @@
       width: 50%;
       display: flex;
       justify-content: end;
+
+      button {
+        font-size: clamp(0.8em, 1.5vw, 1.8em);
+      }
+
+      button:disabled {
+        cursor: not-allowed !important;
+      }
+
+      button:enabled {
+        cursor: pointer !important;
+      }
     }
   }
 }
 
-.error-message {
-  color: var(--error-color) !important;
+.input-primary {
+  position: relative;
+  background-color: var(--bg-color);
+
+  .input-error {
+    box-shadow: 0 0 0 1px var(--error-color) !important;
+  }
+
+  .error-message {
+    position: absolute;
+
+    display: flex;
+    flex-direction: column;
+
+    bottom: -2.5vh;
+    color: var(--error-color);
+    font-size: clamp(0.5em, 0.9vw, 1.5em) !important;
+  }
 }
 
 .logo-container {
   position: absolute;
-  top: 75px;
-  left: 75px;
+  top: 2vh;
+  left: 2vw;
   display: flex;
   align-items: center;
   gap: var(--gap-16);
 
   img:first-child {
-    height: 70px;
+    height: clamp(56px, 10vw, 100px);
   }
 
   .logo-name {
     position: relative;
-    font-size: 34px;
+    font-size: clamp(1.5em, 5vw, 2.5em);
     color: var(--black-color);
     font-weight: bold;
     letter-spacing: -2px;
@@ -112,8 +143,7 @@
 }
 
 .info-links {
-  bottom: 2.5vh;
-  width: 100%;
+  bottom: 2vh;
 
   justify-content: center;
 }
