--- a/src/app/landing-page/register/register.component.scss
+++ b/src/app/landing-page/register/register.component.scss
@@ -1,3 +1,8 @@
+p,
+a {
+  font-size: clamp(0.8em, 1.5vw, 1.8em);
+}
+
 .register {
   display: flex;
   flex-direction: column;
@@ -12,16 +17,13 @@
     justify-content: space-between;
     align-items: center;
 
-    gap: 14px;
+    gap: clamp(2vh, 3vh, 4vh);
 
-    min-height: 60%;
-    max-height: 85%;
-    min-width: 25%;
     max-width: 50%;
 
     text-align: center;
 
-    padding: 50px;
+    padding: clamp(20px, 5vw, 50px);
 
     background-color: var(--text-color);
     border-radius: 30px;
@@ -38,6 +40,7 @@
         cursor: pointer;
         color: var(--black-color);
         font-size: 24px;
+        scale: 1.5;
 
         &:hover {
           background-color: var(--bg-color);
@@ -61,19 +64,29 @@
       position: relative;
       background-color: var(--bg-color);
 
-      .input-error {
-        box-shadow: 0 0 0 1px var(--error-color) !important;
+      input {
+        width: 100%;
+      }
+
+      .password-requirements {
+        position: absolute;
+        bottom: -2.5vh;
+
+        p {
+          font-size: clamp(0.5em, 0.9vw, 1.5em) !important;
+        }
+
+        p {
+          color: var(--error-color);
+          margin: 2px 0;
+        }
       }
 
       .error-message {
         position: absolute;
-        bottom: -24px;
-
-        display: flex;
-        flex-direction: column;
-
+        bottom: -2.5vh;
         color: var(--error-color);
-        font-size: 14px;
+        font-size: clamp(0.5em, 0.9vw, 1.5em) !important;
       }
     }
 
@@ -81,13 +94,18 @@
       width: 50%;
       display: flex;
       justify-content: end;
+      cursor: not-allowed;
+
+      button {
+        font-size: clamp(0.8em, 1.5vw, 1.8em);
+      }
     }
   }
 }
 
 .error-message {
   color: var(--error-color);
-  font-size: 14px;
+  font-size: clamp(0.5em, 0.9vw, 1.5em) !important;
 }
 
 form {
@@ -102,19 +120,19 @@ form {
 
 .logo-container {
   position: absolute;
-  top: 75px;
-  left: 75px;
+  top: 2vh;
+  left: 2vw;
   display: flex;
   align-items: center;
   gap: var(--gap-16);
 
   img:first-child {
-    height: 70px;
+    height: clamp(56px, 10vw, 100px);
   }
 
   .logo-name {
     position: relative;
-    font-size: 34px;
+    font-size: clamp(1.5em, 5vw, 2.5em);
     color: var(--black-color);
     font-weight: bold;
     letter-spacing: -2px;
@@ -143,8 +161,8 @@ form {
 }
 
 .info-links {
-  bottom: 2.5vh;
-  width: 100%;
+  position: absolute;
+  bottom: 2vh;
 
   justify-content: center;
 }
