--- a/src/app/landing-page/register/register.component_media.scss
+++ b/src/app/landing-page/register/register.component_media.scss
@@ -1,80 +1,31 @@
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (max-width: 1200px) {
-  .logo-container {
-    top: 50px !important;
-    left: 50px !important;
-  }
-
-  .info-links {
-    position: absolute !important;
-    bottom: 20px !important;
-    align-items: end !important;
-    gap: unset !important;
-    width: unset !important;
+  .register mat-card {
+    max-width: 75% !important;
   }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (max-width: 992px) {
-  .logo-container {
-    top: 25px !important;
-    left: 25px !important;
-
-    img:first-child {
-      height: 70px !important;
-    }
-
-    .logo-name {
-      font-size: 34px !important;
-    }
-  }
-
-  .register mat-card {
-    padding: 35px;
-
-    .headline {
-      h1 {
-        font-size: var(--fontsize-32) !important;
-      }
-    }
-
-    p {
-      font-size: 16px !important;
-    }
-  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 768px) {
   .register {
     justify-content: space-evenly !important;
-
-    mat-card {
-      min-height: 70% !important;
-    }
   }
 
   .logo-container {
-    position: unset !important;
-    top: 0 !important;
-    left: 0 !important;
+    position: fixed !important;
+    top: 5vh !important;
+    left: unset !important;
 
     display: flex;
     justify-content: center;
     align-items: center !important;
-    width: 100%;
-
-    img:first-child {
-      height: 70px !important;
-    }
-
-    .logo-name {
-      font-size: 34px !important;
-    }
   }
 
   .register mat-card {
-    padding: 20px;
     max-width: unset !important;
   }
 }
@@ -85,19 +36,6 @@
 
 /* Very small devices (landscape tablets, 450px and down) */
 @media only screen and (max-width: 450px) {
-  a,
-  p,
-  span {
-    font-size: 14px !important;
-  }
-
-  .logo-container {
-    scale: 0.8;
-
-    .logo-name span {
-      font-size: unset !important;
-    }
-  }
 }
 
 /* smallest devices (300px and down) */
