--- a/src/app/landing-page/register/select-avatar/select-avatar.component.scss
+++ b/src/app/landing-page/register/select-avatar/select-avatar.component.scss
@@ -1,3 +1,8 @@
+p,
+a {
+  font-size: clamp(0.8em, 1.5vw, 1.8em);
+}
+
 .select-avatar {
   display: flex;
   flex-direction: column;
@@ -12,16 +17,13 @@
     justify-content: space-between;
     align-items: center;
 
-    gap: 20px;
+    gap: clamp(2vh, 3vh, 4vh);
 
-    min-height: 75%;
-    max-height: 80%;
-    min-width: 25%;
     max-width: 50%;
 
     text-align: center;
 
-    padding: 50px;
+    padding: clamp(20px, 5vw, 50px);
     margin-bottom: 20px;
 
     background-color: var(--text-color);
@@ -43,6 +45,7 @@
         color: var(--black-color);
         font-size: 24px;
         display: flex;
+        scale: 1.5;
 
         &:hover {
           background-color: var(--bg-color);
@@ -65,7 +68,6 @@
 
       .avatar-placeholder {
         position: relative;
-        cursor: pointer;
         width: 168px;
         height: 168px;
         padding: var(--padding-16);
@@ -149,32 +151,50 @@
       .upload-avatar {
         display: flex;
         align-items: center;
-        gap: 24px;
+        gap: 1vw;
         margin-top: 16px;
+
+        label {
+          align-items: center;
+          display: flex;
+          justify-content: center;
+        }
       }
     }
     .next-button {
       width: 50%;
       display: flex;
       justify-content: end;
+
+      button {
+        font-size: clamp(0.8em, 1.5vw, 1.8em);
+      }
+
+      button:disabled {
+        cursor: not-allowed !important;
+      }
+
+      button:enabled {
+        cursor: pointer !important;
+      }
     }
   }
 
   .logo-container {
     position: absolute;
-    top: 75px;
-    left: 75px;
+    top: 2vh;
+    left: 2vw;
     display: flex;
     align-items: center;
     gap: var(--gap-16);
 
     img:first-child {
-      height: 70px;
+      height: clamp(56px, 10vw, 100px);
     }
 
     .logo-name {
       position: relative;
-      font-size: 34px;
+      font-size: clamp(1.5em, 5vw, 2.5em);
       color: var(--black-color);
       font-weight: bold;
       letter-spacing: -2px;
@@ -204,8 +224,8 @@
   }
 
   .info-links {
-    bottom: 2.5vh;
-    width: 100%;
+    position: absolute;
+    bottom: 2vh;
 
     justify-content: center;
   }
