Channel name form validation
Now the form validation for the channel name prevents creation of channels with the same name. It prooves all existing channels and not only the channels the user has.

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -27,6 +27,7 @@
       *ngIf="userData"
       [userData]="userData"
       [allChannelsData]="allChannelsData"
+      [allExistingChannelNames]="allExistingChannelNames"
       [drawerMode]="drawerMode"
     ></app-side-nav>
   </mat-drawer>
