--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,10 @@
   height: 100vh;
   background-color: var(--bg-color);
   padding: 25px 20px;
+
+  @media screen and (max-width: 600px) {
+    padding: 0;
+  }
 }
 
 ::ng-deep app-login,
