--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -35,11 +35,11 @@
             Channels
           </div>
           <button
+            id="create_channel_button"
             mat-icon-button
             class="toolbar-icon"
             clickStopPropagation
             (click)="openCreateChannelDialog()"
-            [attr.autofocus]="false"
           >
             <mat-icon class="material-symbols-outlined add-icon">add</mat-icon>
           </button>
