Profile-dialog font size adjusted

--- a/src/app/main/header/profile-dialog/profile-dialog.component.scss
+++ b/src/app/main/header/profile-dialog/profile-dialog.component.scss
@@ -22,7 +22,7 @@
 }
 
 .profile-dialog-button {
-  font-size: var(--fontsize-32);
+  font-size: 28px;
   color: var(--black-color) !important;
   outline: none !important;
   padding: 12px 45px;
