--- a/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-edit/own-private-message-edit.component.scss
+++ b/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-edit/own-private-message-edit.component.scss
@@ -32,6 +32,7 @@ section {
     outline: none;
     border: none;
     padding: 20px 10px;
+    font-size: 18px;
   }
   
   .icons-container {
@@ -88,5 +89,11 @@ section {
   flex-wrap: wrap;
   justify-content: flex-start;
   width: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+  textarea {
+    font-size: 16px;
+  }
 }
   
