--- a/src/app/landing-page/register/select-avatar/select-avatar.component_media.scss
+++ b/src/app/landing-page/register/select-avatar/select-avatar.component_media.scss
@@ -25,7 +25,7 @@
   .select-avatar {
     justify-content: space-evenly !important;
     mat-card {
-      max-width: unset !important;
+      max-width: 95% !important;
     }
   }
 
