--- a/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.scss
+++ b/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.scss
@@ -106,6 +106,7 @@
     .input-secondary {
       flex-direction: column;
       align-items: flex-start;
+      gap: 8px;
       input {
         padding: 15px 20px;
         font-size: 18px;
