--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,9 +44,9 @@
 /* Track */
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 4px var(--grey-color);
-  border-radius: 100% 30px 30px 100%;
+  border-radius: 30px;
   overflow: hidden;
-  margin: 1vh;
+  margin: 1.5vh;
 }
 
 /* Handle */
