--- a/src/app/main/private-chat/private-chat-header/private-chat-header.component.html
+++ b/src/app/main/private-chat/private-chat-header/private-chat-header.component.html
@@ -8,7 +8,7 @@
       (click)="openProfileInfo()"
     >
       <div class="image-with-badge">
-        <img [src]="chatUserPhotoURL || '../../../../assets/img/profile/placeholder-img.webp'" alt="Profile Picture">
+        <img [src]="chatUserPhotoURL || 'assets/img/profile/placeholder-img.webp'" alt="Profile Picture">
         <div class="badge" [class.online]="userService.checkUserOnlineStatus(chatUserId!)"></div>
       </div>
       <span>{{ chatUserName || 'Loading...' }}</span>
