--- a/src/app/main/private-chat/private-chat.component.scss
+++ b/src/app/main/private-chat/private-chat.component.scss
@@ -1,3 +1,14 @@
+::ng-deep {
+  // :root {
+  //   --currentBorderRadius: 0px 30px 30px 30px;
+  // }
+
+  .mat-mdc-menu-panel {
+    max-width: none;
+    border-radius: var(--currentBorderRadius);
+  }
+}
+
 :host {
   display: flex;
   flex-grow: 1;
