--- a/src/app/shared/components/upload-method-selector/upload-method-selector.component.html
+++ b/src/app/shared/components/upload-method-selector/upload-method-selector.component.html
@@ -1,7 +1,7 @@
 <section (click)="$event.stopPropagation()">
     <h3>Anhang hinzufügen</h3>
-    <div class="choose-file" (click)="openFileDialog('document')"><img src="../../../../assets/icons/document.webp" alt="">Dokument</div>
-    <div class="choose-file" (click)="openFileDialog('image')"><img src="../../../../assets/icons/image.webp" alt="">Bild</div>
+    <div class="choose-file" (click)="openFileDialog('document')"><img src="assets/icons/document.webp" alt="">Dokument</div>
+    <div class="choose-file" (click)="openFileDialog('image')"><img src="assets/icons/image.webp" alt="">Bild</div>
     
     <!-- Drag-and-Drop-Feld -->
     <div
