Switched the path at the index.html

--- a/src/app/main/private-chat/private-chat.component.scss
+++ b/src/app/main/private-chat/private-chat.component.scss
@@ -1,7 +1,7 @@
 ::ng-deep {
-  // :root {
-  //   --currentBorderRadius: 0px 30px 30px 30px;
-  // }
+  :root {
+    --currentBorderRadius: 0px 30px 30px 30px;
+  }
 
   .mat-mdc-menu-panel {
     max-width: none;
